# dsa-roadmap

./: .clang-format  .deepsource.toml  .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  check_readme.sh  flake.nix  new_solution.sh  package.json  shell.nix  x
C/: CMakeLists.txt  Makefile
C++/: CMakeLists.txt
C++/lib/: binary_tree.cc  binary_tree.hpp  linked_list.cc  linked_list.hpp  linked_list_test.cc
C++/solutions_1/: solutions_1.hpp  solutions_1_tests.cc
C++/solutions_11/: solutions_11.hpp  solutions_11_tests.cc
C++/solutions_125/: solutions_125.hpp  solutions_125_tests.cc
C++/solutions_1358/: solutions_1358.hpp  solutions_1358_tests.cc
C++/solutions_14/: solutions_14.hpp  solutions_14_tests.cc
C++/solutions_141/: solutions_141_tests.cc
C++/solutions_146/: solutions_146_tests.cc
C++/solutions_15/: solutions_15.hpp  solutions_15_tests.cc
C++/solutions_1512/: solutions_1512.hpp  solutions_1512_tests.cc
C++/solutions_1518/: solutions_1518_tests.cc
C++/solutions_162/: solutions_162.hpp  solutions_162_tests.cc
C++/solutions_167/: solutions_167.hpp  solutions_167_tests.cc
C++/solutions_1780/: solutions_1780.hpp  solutions_1780_tests.cc
C++/solutions_189/: solutions_189.hpp  solutions_189_tests.cc
C++/solutions_19/: solutions_19.hpp  solutions_19_tests.cc
C++/solutions_2/: solutions_2.hpp  solutions_2_tests.cc
C++/solutions_20/: solutions_20.hpp
C++/solutions_204/: solutions_204.hpp  solutions_204_tests.cc
C++/solutions_215/: solutions_215.hpp
C++/solutions_224/: solutions_224.hpp  solutions_224_tests.cc
C++/solutions_227/: solutions_227.hpp
C++/solutions_23/: solutions_23.hpp  solutions_23_tests.cc
C++/solutions_231/: solutions_231.hpp  solutions_231_tests.cc
C++/solutions_2523/: solutions_2523_tests.cc
C++/solutions_2529/: solutions_2529.hpp  solutions_2529_tests.cc
C++/solutions_2570/: solutions_2570.hpp  solutions_2570_tests.cc
C++/solutions_258/: solutions_258.hpp  solutions_258_tests.cc
C++/solutions_26/: solutions_26.hpp  solutions_26_tests.cc
C++/solutions_27/: solutions_27.hpp  solutions_27_tests.cc
C++/solutions_295/: solutions_295_tests.cc
C++/solutions_2965/: solutions_2965.hpp  solutions_2965_tests.cc
C++/solutions_3/: solutions_3.hpp  solutions_3_tests.cc
C++/solutions_31/: solutions_31.hpp  solutions_31_tests.cc
C++/solutions_33/: solutions_33.hpp  solutions_33_tests.cc
C++/solutions_34/: solutions_34.hpp  solutions_34_tests.cc
C++/solutions_344/: solutions_344.hpp  solutions_344_tests.cc
C++/solutions_36/: solutions_36.hpp  solutions_36_tests.cc
C++/solutions_4/: solutions_4.hpp  solutions_4_tests.cc
C++/solutions_430/: solutions_430.hpp  solutions_430_tests.cc
C++/solutions_5/: solutions_5.hpp  solutions_5_tests.cc
C++/solutions_50/: solutions_50.hpp  solutions_50_tests.cc
C++/solutions_528/: solutions_528.hpp  solutions_528_tests.cc
C++/solutions_692/: solutions_692_tests.cc
C++/solutions_7/: solutions_7_tests.cc
C++/solutions_704/: solutions_704.hpp  solutions_704_tests.cc
C++/solutions_73/: solutions_73.hpp
C++/solutions_733/: solutions_733.hpp
C++/solutions_74/: solutions_74.hpp  solutions_74_tests.cc
C++/solutions_747/: solutions_747.hpp  solutions_747_tests.cc
C++/solutions_8/: solutions_8.hpp  solutions_8_tests.cc
C++/solutions_876/: solutions_876.hpp  solutions_876_tests.cc
C++/solutions_88/: solutions_88.hpp  solutions_88_tests.cc
C++/solutions_9/: solutions_9.hpp  solutions_9_tests.cc
C++/solutions_woodcutting/: solutions_woodcutting.hpp  solutions_woodcutting_tests.cc
C++/src/: 3sum.cc  3sum.hpp  add_two_numbers.cc  add_two_numbers.hpp  container_with_most_water.cc  container_with_most_water.hpp  count_primes.cc  count_primes.hpp  find_all_anagrams_in_string.cc  find_all_anagrams_in_string.hpp  happy_number.cc  happy_number.hpp  intersection_of_two_linked_list.cc  intersection_of_two_linked_list.hpp  linked_list_cycle.cc  linked_list_cycle.hpp  longest_consecutive_sequence.cc  longest_consecutive_sequence.hpp  longest_palindrome.cc  longest_palindrome.hpp  longest_repeating_character_replacement.cc  longest_repeating_character_replacement.hpp  longest_substr_without_repeat.cc  longest_substr_without_repeat.hpp  lru_cache.cc  lru_cache.hpp  merge_two_2d_arrays_by_summing_values.cc  merge_two_2d_arrays_by_summing_values.hpp  middle_of_list.cc  middle_of_list.hpp  move_zeroes.cc  move_zeroes.hpp  next_permutation.cc  next_permutation.hpp  palindrome_linked_list.cc  palindrome_linked_list.hpp  remove_element.cc  remove_element.hpp  remove_nth_node.cc  remove_nth_node.hpp  (+16 more)
C++/tests/: 3sum_test.cc  add_two_numbers_test.cc  binary_tree_test.cc  container_with_most_water_test.cc  count_primes_test.cc  find_all_anagrams_in_string_test.cc  happy_number_test.cc  intersection_of_two_linked_list_test.cc  linked_list_cycle_test.cc  linked_list_test.cc  longest_consecutive_sequence_test.cc  longest_palindrome_test.cc  longest_repeating_character_replacement_test.cc  longest_substr_without_repeat_test.cc  lru_cache_test.cc  merge_two_2d_arrays_by_summing_values_test.cc  middle_of_list_test.cc  move_zeroes_test.cc  next_permutation_test.cc  palindrome_linked_list_test.cc  remove_element_test.cc  remove_nth_node_test.cc  reverse_linked_list_test.cc  reverse_string_test.cc  same_tree_test.cc  search_insert_position_test.cc  set_matrix_zeroes_test.cc  solutions_0034_test.cc  two_sum_test.cc  valid_sudoku_test.cc
C/lib/: array.h  linked_list.c  linked_list.h
C/src/: add_two_numbers.c  add_two_numbers.h  increasing_triplet_subsequence.c  increasing_triplet_subsequence.h  sort_an_array.c  two_sum.c  two_sum.h  two_sum_2.c  two_sum_2.h
C/tests/: add_two_numbers_test.c  array_test.c  increasing_triplet_subsequence_test.c  linked_list_test.c  sort_an_array_test.c  two_sum_2_test.c  two_sum_test.c
C/utils/: algorithm.h  array.c  array_test.c
CC/: Makefile  build.js  build.py  build.sh
JS/: package-lock.json  package.json
JavaScript/: package-lock.json  package.json  vitest.config.ts
include/: linked_list.hh  utils.hh
(+581 files in other folders)
